@@ -1,5 +1,7 @@
 2011-08-25  Jason Merrill  <jason@redhat.com>
 
+	* call.c (convert_like_real): Remove redundant complain checks.
+
 	PR c++/50157
 	* call.c (convert_like_real): Exit early if bad and !tf_error.
 
